--- a/Front2/public/index.html
+++ b/Front2/public/index.html
@@ -29,6 +29,7 @@
      -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui/dist/semantic.min.css">
     <title>LowStore</title>
   </head>
   <body>
